# FlappyBird

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
engine/: CMakeLists.txt
engine/include/engine/: Platform.h  StringHash.h
engine/include/engine/core/: AppSpec.h  Application.h  AssetManager.h  Layer.h  ServiceLocator.h
engine/include/engine/core/exceptions/: AssetExceptions.h  EngineException.h
engine/src/core/: Application.cpp  AssetManager.cpp  Layer.cpp  ServiceLocator.cpp
game/: CMakeLists.txt
game/include/game/layers/: BouncingBallLayer.h  MainMenuLayer.h
game/src/: main.cpp
game/src/layers/: BouncingBallLayer.cpp  MainMenuLayer.cpp
